cmake_minimum_required(VERSION 3.13)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_PREFIX_PATH /home/nyoos/Documents/research/pir/seal-debug-lib)
set(CMAKE_BUILD_TYPE Debug)
project(Onion-PIR)
add_executable(Onion-PIR src/main.cpp src/client.cpp src/server.cpp src/pir.cpp src/utils.cpp)
find_package(SEAL 4.1 REQUIRED)
target_link_libraries(Onion-PIR SEAL::seal)
target_include_directories(Onion-PIR PUBLIC src/includes)