cmake_minimum_required(VERSION 3.13)
# Set build type to debug if not specified
if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif()
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
set(IS_BENCHMARK_BUILD CMAKE_BUILD_TYPE STREQUAL "Benchmark")
if (${IS_BENCHMARK_BUILD})
    add_compile_definitions(_BENCHMARK)
    set(CMAKE_PREFIX_PATH /home/suni/Documents/Research/fhe/seal-lib)
elseif (CMAKE_BUILD_TYPE MATCHES Debug)
    set(CMAKE_PREFIX_PATH /home/suni/Documents/Research/fhe/seal-lib-debug)
endif ()
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(Onion-PIR)
add_executable(Onion-PIR src/main.cpp src/client.cpp src/server.cpp src/pir.cpp src/utils.cpp src/external_prod.cpp)
find_package(SEAL 4.1 REQUIRED)
target_link_libraries(Onion-PIR SEAL::seal)
target_include_directories(Onion-PIR PUBLIC src/includes)